# rules_bzlformat

./: .bazelrc  BUILD.bazel  README.md  WORKSPACE
.github/workflows/: bazel.yml
bzlformat/: BUILD.bazel  bzlformat.bzl  deps.bzl
bzlformat/internal/: BUILD.bazel  bzlformat.bzl  bzlformat_check.bzl  bzlformat_format.bzl  bzlformat_missing_pkgs.bzl  bzlformat_pkg.bzl  bzlformat_update_pkgs.bzl
doc/: BUILD.bazel  rules_and_macros_overview.md
examples/: BUILD.bazel  simple_test.sh
examples/simple/: BUILD.bazel  WORKSPACE  do_change_test.sh
examples/simple/mockascript/: BUILD.bazel
examples/simple/mockascript/internal/: BUILD.bazel  foo.bzl
fmttest/: BUILD.bazel  content_test.bzl  content_test_equals.sh.template  filter_srcs.bzl
scripts/: BUILD.bazel  common.sh  find_missing_pkgs.sh  normalize_pkg_test.sh  update_missing_pkgs.sh  update_pkgs.sh
tests/: BUILD.bazel
tests/scripts/common/: BUILD.bazel
tests/scripts_tests/find_missing_pkgs_tests/: BUILD.bazel
tests/scripts_tests/integration_tests/: BUILD.bazel  missing_pkgs_test.sh
tests/scripts_tests/integration_tests/workspace/: BUILD.bazel  WORKSPACE
tests/scripts_tests/integration_tests/workspace/foo/bar/: BUILD.bazel
tests/scripts_tests/update_missing_pkgs_tests/: BUILD.bazel  missing_pkgs_with_exclude_test.sh  no_missing_pkgs_test.sh
tests/tools_tests/missing_pkgs_tests/: BUILD.bazel  missing_pkgs_test.sh
tests/tools_tests/missing_pkgs_tests/common_tests/: BUILD.bazel
tests/tools_tests/missing_pkgs_tests/workspace/: BUILD.bazel
tools/: BUILD.bazel
tools/missing_pkgs/: BUILD.bazel  find.sh  fix.sh  update.sh
