load("//bzlformat:bzlformat.bzl", "bzlformat_pkg")
load(
    "@cgrindel_rules_bazel_integration_test//bazel_integration_test:bazel_integration_test.bzl",
    "bazel_integration_tests",
    "integration_test_utils",
)
load("//:bazel_versions.bzl", "SUPPORTED_BAZEL_VERSIONS")

bzlformat_pkg(name = "bzlformat")

# MARK: - Integration Tests

bazel_integration_tests(
    name = "simple_test",
    bazel_versions = SUPPORTED_BAZEL_VERSIONS,
    workspace_files = integration_test_utils.glob_workspace_files("simple") + [
        "//:workspace_integration_test_files",
    ],
)

# TODO: FIX ME

# bazel_integration_tests(
#     name = "simple_test",
#     bazel_versions = SUPPORTED_BAZEL_VERSIONS,
#     sh_data = [
#         "@com_github_bazelbuild_buildtools//buildozer",
#     ],
#     sh_deps = [
#         "@bazel_tools//tools/bash/runfiles",
#         "@cgrindel_bazel_shlib//lib:assertions",
#         "@cgrindel_bazel_shlib//lib:paths",
#         "@cgrindel_bazel_shlib//lib:messages",
#     ],
#     test_runner_srcs = ["simple_test.sh"],
#     workspace_files = integration_test_utils.glob_workspace_files("simple") + [
#         "//:workspace_integration_test_files",
#     ],
#     workspace_path = "workspace",
# )

test_suite(
    name = "all_integration_tests",
    tags = integration_test_utils.DEFAULT_INTEGRATION_TEST_TAGS,
    tests = integration_test_utils.bazel_integration_test_names(
        "//examples:simple_test",
        SUPPORTED_BAZEL_VERSIONS,
    ),
    visibility = ["//:__subpackages__"],
)
