sh_binary(
    name = "buildifier",
    srcs = ["buildifier.sh"],
    data = ["@com_github_bazelbuild_buildtools//buildifier"],
    visibility = ["//visibility:public"],
    deps = ["@bazel_tools//tools/bash/runfiles"],
)

filegroup(
    name = "all_files",
    srcs = glob(["*"]),
    visibility = ["//:__subpackages__"],
)

exports_files([
    "update_pkgs.sh",
    "find_missing_pkgs.sh",
])
