filegroup(
    name = "all_files",
    srcs = glob(["*"]),
    visibility = ["//:__subpackages__"],
)

# MARK: - Shared Libraries

sh_library(
    name = "common",
    srcs = ["common.sh"],
    visibility = ["//tests/scripts_tests/common_tests:__subpackages__"],
)

# MARK: - Binaries

sh_binary(
    name = "buildifier",
    srcs = ["buildifier.sh"],
    data = ["@com_github_bazelbuild_buildtools//buildifier"],
    visibility = ["//visibility:public"],
    deps = ["@bazel_tools//tools/bash/runfiles"],
)

sh_binary(
    name = "find_missing_pkgs",
    srcs = ["find_missing_pkgs.sh"],
    visibility = ["//visibility:public"],
    deps = [
        ":common",
        "@bazel_tools//tools/bash/runfiles",
        "@cgrindel_bazel_shlib//lib:arrays",
    ],
)

sh_binary(
    name = "update_pkgs",
    srcs = ["update_pkgs.sh"],
    data = [
        ":find_missing_pkgs",
        "@com_github_bazelbuild_buildtools//buildozer",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "@bazel_tools//tools/bash/runfiles",
        "@cgrindel_bazel_shlib//lib:arrays",
    ],
)
