load("//bzlformat:bzlformat.bzl", "bzlformat_format")
load("//fmttest:content_test.bzl", "content_test")
load("//fmttest:filter_srcs.bzl", "filter_srcs")
load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("@bazel_skylib//rules:write_file.bzl", "write_file")

build_test(
    name = "public_api",
    targets = [
        "//bzlformat:deps",
        "//bzlformat:bzlformat",
    ],
)

# MARK: - bzlformat_format Tests

write_file(
    name = "foo_bzl",
    out = "foo.bzl",
    content = [
        "def foo(tags=[], srcs=[]):",
        "    pass",
    ],
    is_executable = False,
)

write_file(
    name = "bar_bzl",
    out = "bar.bzl",
    content = [
        "load(':foo.bzl', 'foo'); foo(tags=['b', 'a'],srcs=['d', 'c'])",
    ],
    is_executable = False,
)

bzlformat_format(
    name = "format",
    srcs = [
        ":bar_bzl",
        ":foo_bzl",
    ],
)

filter_srcs(
    name = "foo_bzl_formatted",
    srcs = [":format"],
    filename_ends_with = "foo.bzl_formatted",
)

content_test(
    name = "format_test",
    equals = """\
def foo(tags = [], srcs = []):
    pass
""",
    file = ":foo_bzl_formatted",
)
