load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

package(default_visibility = ["//bzlformat:__subpackages__"])

bzl_library(
    name = "bzlformat_format",
    srcs = ["bzlformat_format.bzl"],
    deps = [
        "@bazel_skylib//lib:paths",
        "@cgrindel_rules_updatesrc//updatesrc",
    ],
)
