load("@cgrindel_rules_bzlformat//bzlformat:bzlformat.bzl", "bzlformat_pkg")

bzlformat_pkg(name = "bzlformat")

sh_test(
    name = "find_missing_pkgs_test",
    srcs = ["find_missing_pkgs_test.sh"],
    data = [
        "//scripts:find_missing_pkgs",
    ],
    deps = [
        "@bazel_tools//tools/bash/runfiles",
        "@cgrindel_bazel_shlib//lib:assertions",
    ],
)
